--- a/public/d/header/header.html
+++ b/public/d/header/header.html
@@ -7,9 +7,9 @@
            </div>
         </div>
         <div class="hd-sec">
-            <a id="menu-toggle" href="#menu-toggle">
+         	<!--   <a id="menu-toggle" href="#menu-toggle">
                 <i class="fa fa-bars"></i>
-            </a>
+            </a> -->
             
             &nbsp;&nbsp;<a href="#">{{title2}}</a>
         </div>
