--- a/public/d/header/title.html
+++ b/public/d/header/title.html
@@ -22,7 +22,7 @@ height:60px;
                     <div class="profile-details-div">
                       
                         <a id="menu-toggle" href="#menu-toggle">
-                           <i class="fa fa-bars"></i>
+                           <i class="fa fa-bars" style="color:#FFF;font-size:25px;"></i> 
                         </a>
                    &nbsp;&nbsp;       
          
