--- a/public/m/positions/openPositions.html
+++ b/public/m/positions/openPositions.html
@@ -8,41 +8,60 @@
         </div>
     </div> !-->
 </div>
-<div class="divtop">
-    <br>
-    <div class="my-visit-content col-xs-12 col-sm-12 col-md-12">
-        <div ng-repeat="position in positionList" class="visit-card">
-            <div> 
-                <div class="visitlinks">
-                    <h4>{{position.positionId}}</h4>
-                    <h5><a target="_blank" href="/public/uploads/jd/{{position.positionId}}.doc"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;&nbsp;{{position.jobTitle | uppercase}}</a></h5>
-                </div>
-                <div class="dropdown pull-right">
-                    <div class="dropdown-toggle" type="button" data-toggle="dropdown">
-                        <i class="fa fa-ellipsis-v fonticon1" aria-hidden="true"></i>
-                    </div>
-                    <ul class="dropdown-menu">
-                        <li><a href="#/positions/{{position.positionId}}">Candidates Applied</a></li>
-                        <li class="divider"></li>
-                        <li><a href="/#/execBios/{{visit._id}}">Provide Feedback</a></li>
-                        <li class="divider"></li>
-                        <li><a target="_blank" href="/public/uploads/jd/{{position.positionId}}.doc">View JD</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#/contacts/:city">View Feedback</a></li>
-                    </ul>
-                </div>
-                <p class="visit-details">
-                    <i class="fa fa-calendar"></i> {{position.validTill | date:"dd MMM yyyy"}} 
-                </p>
-                <p class="visit-details">
-                    <i class="fa fa-map-marker"></i> {{position.location}}
-                </p>
 
+<div class="container">
+         <div class="row searchWrapper">
+            <div class="col-sm-9 col-md-4 col-xs-9">
+              <input type="text" class="form-control" placeholder="Search" ng-model="search.$" />
             </div>
-        </div>
+            <div class="col-sm-3 col-md-6 col-xs-3">
+              <div ng-include src="'/public/m/positions/sort.html'"></div>
+            </div>
+         </div><!--row end here -->
+
+        <div class="row">
+            <div class="my-visit-content col-xs-12 col-sm-12 col-md-12">
+                <div ng-repeat="position in positionList | filter: search |orderBy:orderByField:reverseSort" class="visit-card">
+                    <div> 
+                        <div class="visitlinks">
+                            <h4>{{position.positionId}}</h4>
+                            <h5><a target="_blank" href="/public/uploads/jd/{{position.positionId}}.doc"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;&nbsp;{{position.jobTitle | uppercase}}</a></h5>
+                        </div>
+                        <div class="dropdown pull-right">
+                            <div class="dropdown-toggle" type="button" data-toggle="dropdown">
+                                <i class="fa fa-ellipsis-v fonticon1" aria-hidden="true"></i>
+                            </div>
+                            <ul class="dropdown-menu">
+                                <li><a href="#/positions/{{position.positionId}}/candidates">Candidates Applied</a></li>
+                                <li class="divider"></li>
+                                <li><a target="_blank" href="/public/uploads/jd/{{position.positionId}}.doc">View JD</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#/contacts/:city">View Feedback</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#/positions/{{position.positionId}}/edit">Edit position</a></li>
+                                <li class="divider"></li>
+                                <li>
+                                    <a class="table-btn" ng-click="delete(position._id)" confirm-dialog header-text="Delete job Description" content="Are you sure you want to delete the job description? </b>" 
+                                    yes-text="Ok" no-text="Cancel"><span class="fa fa-trash fa-lg" tooltips tooltip-template="Delete job Description"/></a>
+
+                                </li>
+                            </ul>
+                        </div>
+                        <p class="visit-details">
+                            <i class="fa fa-calendar"></i> {{position.validTill | date:"dd MMM yyyy"}} 
+                        </p>
+                        <p class="visit-details">
+                            <i class="fa fa-map-marker"></i> {{position.location}}
+                        </p>
+
+                    </div>
+                </div>
+            </div>
+
+            <div ng-if="positionList.length==0">
+                Oops!@! No Positions Available
+            </div>
     </div>
-    
-    <div ng-if="positionList.length==0">
-        Oops!@! No Positions Available
-    </div>
+
 </div>
+
