--- a/public/m/positions/feedbackTemplate.html
+++ b/public/m/positions/feedbackTemplate.html
@@ -82,8 +82,7 @@ progress::-webkit-progress-value {background-color: #8fa6c8 !important;}
 
 </style>
     
-<div header showprofile="false" icon="fa fa-line-chart" title1="Candidate Feedback" >
-
+<div id="profile-details" header showprofile="false" icon="fa fa-plane" title1="Create Feedback Template" query='query' >
 </div>
 <br>
 <br>
