file uplaod functioanlity for create positions

--- a/public/m/positions/openPositions.html
+++ b/public/m/positions/openPositions.html
@@ -25,7 +25,7 @@
                     <div> 
                         <div class="visitlinks">
                             <h4>{{position.positionId}}</h4>
-                            <h5><a target="_blank" href="/public/uploads/jd/{{position.positionId}}.doc"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;&nbsp;{{position.jobTitle | uppercase}}</a></h5>
+                            <h5><a target="_blank" href="/public/uploads/jd/{{position.positionId}}.pdf"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;&nbsp;{{position.jobTitle | uppercase}}</a></h5>
                         </div>
                         <div class="dropdown pull-right">
                             <div class="dropdown-toggle" type="button" data-toggle="dropdown">
