--- a/public/m/positions/createPositions.html
+++ b/public/m/positions/createPositions.html
@@ -42,17 +42,26 @@
             </div>
          </div>
          <div class="form-group">
-            <label class="control-label col-sm-2" for="location">Job Description</label>
-            <div class="col-md-6 col-sm-2">
-               <input type="text" class="form-control" id="jobDess" placeholder="Job Description" ng-model="jobPos.jobDescription">
-            </div>
-         </div>
-         <div class="form-group">
              <label class="control-label col-sm-2" for="fileAttach">Job Des File</label>
-             <!--input type = "file" file-model = "myFile"/>
-             <button ng-click = "uploadFile()">upload me</button-->
+              <div class="col-md-6 col-sm-2">
+                <button type="file" ngf-select="uploadFiles($file)"
+                  accept="'application/pdf'">
+                  Select File</button>
+                  <div ng-if="mode=='edit'">
+                    <h5>OLD JD -<a target="_blank" href="/public/uploads/jd/{{jobPos.jobDescription}}">{{jobPos.positionId}}</a></h5>
+                  </div>
 
-             <input type="file" ngf-select="onFileSelect($files)" multiple>
+                <input type="hidden" class="form-control" name="Price" ng-init="Price=jobDescription;" ng-value="Price"/>
+                <br><br>
+                <span>File:</span>
+                <div>{{f.name}} {{errFile.name}} {{errFile.$error}} {{errFile.$errorParam}}
+                    <span class="progress" ng-show="f.progress >= 0">
+                        <div style="width:{{f.progress}}%"
+                             ng-bind="f.progress + '%'"></div>
+                    </span>
+                </div>
+                {{errorMsg}}
+              </div>
         </div>
 
 
