Modified feedback template edit

--- a/public/m/positions/feedbackViewAdd.html
+++ b/public/m/positions/feedbackViewAdd.html
@@ -21,8 +21,7 @@
             <div ng-messages="feedbackForm.title.$error" ng-show="feedbackForm.title.$touched || !feedbackForm.title.$pristine">
              <div class="messagenotify">
               <div ng-messages-include="/public/mods/partials/messages.html"></div>
-              <div ng-message="md-maxlength">The feedback title  has to be less than 30 characters long.</div>
-              <div ng-message="minlength">the feedback title should contain minimum 5 characters</div>
+              <div ng-message="md-maxlength">The feedback title  need to be 5 to 30 characters long.</div>
             </div>
           </div>
         </md-input-container>        
