--- a/public/m/positions/createPositions.html
+++ b/public/m/positions/createPositions.html
@@ -42,6 +42,14 @@
             </div>
          </div>
          <div class="form-group">
+            <label class="control-label col-sm-2" for="location">Valid Till</label>
+            <div class="col-md-6 col-sm-2">
+               <datepicker date-format="yyyy-MM-dd">
+                  <input ng-model="date" type="text"/>
+                </datepicker>
+            </div>
+         </div>
+         <div class="form-group">
              <label class="control-label col-sm-2" for="fileAttach">Job Des File</label>
               <div class="col-md-6 col-sm-2">
                 <button type="file" ngf-select="uploadFiles($file)"
