added feedback sections and restrictions on userrole

--- a/public/m/positions/openPositions.html
+++ b/public/m/positions/openPositions.html
@@ -34,7 +34,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="#/positions/{{position.positionId}}/candidates">Candidates Applied</a></li>
                                 <li class="divider"></li>
-                                <li><a target="_blank" href="/public/uploads/jd/{{position.positionId}}.doc">View JD</a></li>
+                                <li><a target="_blank" href="/public/uploads/jd/{{position.positionId}}.pdf">View JD</a></li>
                                 <li class="divider"></li>
                                 <li><a href="#/contacts/:city">View Feedback</a></li>
                                 <li class="divider"></li>
