--- a/public/m/positions/tile.html
+++ b/public/m/positions/tile.html
@@ -79,9 +79,9 @@
                       <ul class="dropdown-menu">
                           <li><a href="#/positions/{{position.positionId}}/candidates">Candidates Applied</a></li>
                           <li class="divider"></li>
-                          <li><a href="#/feedbackTmpl/attach/{{position.positionId}}">Attach Feedback Query</a></li>
+                          <li><a href="#/feedbackTmpl/attach/{{position.positionId}}">Attach Feedback Template</a></li>
                           <li class="divider"></li>
-                          <li><a target="_blank" href="/public/uploads/jd/{{position.positionId}}.doc">View JD</a></li>
+                          <li><a target="_blank" href="/public/uploads/jd/{{position.positionId}}.pdf">View JD</a></li>
                           <li class="divider"></li>
                           <li><a href="#/contacts/:city">View Feedback</a></li>
                       </ul>
@@ -111,7 +111,7 @@
                     </div>
                   </section>
 
-            </li>
+              </li>
           </ul>
         </div> 
     </div>   
