Drag issues fixed

--- a/public/d/header/header.html
+++ b/public/d/header/header.html
@@ -13,7 +13,8 @@
             
             &nbsp;&nbsp;<a href="#">{{title2}}</a>
         </div>
-        <div class="hd-sticky">
+        
+        <div class="hd-sticky"><a href="#/changeTheme" class="changeTheme">Change Themes</a> 
         <ng-transclude></ng-transclude>
         </div>
     </div>
