--- a/public/m/positions/sort.html
+++ b/public/m/positions/sort.html
@@ -4,6 +4,7 @@
         <span class="caret"></span></button>
         <ul class="dropdown-menu" >
           <li><a href="#/positions">Tile View</a></li>
-          <li><a href="#/positions/panel">Panel View</a></li>              
+          <li><a href="#/positions/panel">Panel View</a></li>
+          <li><a href="#/positions/tables">Table View</a></li> 
         </ul>
       </div>
