--- a/public/m/home/home.html
+++ b/public/m/home/home.html
@@ -4,6 +4,7 @@
    <div class="profile-pic"><img src="{{user.avatar}}"></div>
    <div class="profile-name">{{user.name.first}} {{user.name.last}}</div>
    <div class="profile-desc">{{user.jobTitle}} {{user.organization}}</div>
+   <div class="hd-sticky"><a href="/m/positions#/changeTheme" class="changeTheme">Change Themes</a></div>
    <!--<div class="profile-location">
       <location-picker ng-model="pickedLocation" limit-to="1"></location-picker>
    </div>-->
