--- a/public/d/header/header.html
+++ b/public/d/header/header.html
@@ -14,7 +14,7 @@
             &nbsp;&nbsp;<a href="#">{{title2}}</a>
         </div>
         
-        <div class="hd-sticky"><a href="#/changeTheme" class="changeTheme">Change Themes</a> 
+        <div class="hd-sticky"><a href="#/changeTheme" class="changeTheme"><i class="fa fa-cog" aria-hidden="true"></i></a>
         <ng-transclude></ng-transclude>
         </div>
     </div>
